--- a/src/index.css
+++ b/src/index.css
@@ -8,15 +8,18 @@ body {
   margin: 0;
 }
 
+.gap-10 {
+  gap: 10px;
+}
+
 .wrapper {
   display: flex;
   width: 75%;
   height: 100%;
   justify-items: center;
   align-items: center;
-  gap: 10px;
 
-  div {
+  .anim-1 {
     border: 1px solid black;
     max-height: 75vh;
     height: 100px;
