Add .element global animated ctn

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,16 @@ body {
   gap: 10px;
 }
 
+.element {
+  background-color: #e8e8e8;
+  border: 1px solid black;
+  transition: all 0.2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+}
+
 .wrapper {
   display: flex;
   width: 75%;
@@ -20,15 +30,8 @@ body {
   align-items: center;
 
   .anim-1 {
-    border: 1px solid black;
     max-height: 75vh;
     height: 100px;
     flex-grow: 1;
-    background-color: #e8e8e8;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2rem;
-    transition: all 0.2s;
   }
 }
