--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
+html {
+  height: 100%;
+}
+
 body {
   display: flex;
-  place-content: center;
-  width: 100%;
-  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100%;
   background-color: #212121;
   padding: 0;
   margin: 0;
@@ -25,7 +29,7 @@ body {
 .wrapper {
   display: flex;
   width: 75%;
-  height: 100%;
+  height: 100vh;
   justify-items: center;
   align-items: center;
 
@@ -34,4 +38,8 @@ body {
     height: 100px;
     flex-grow: 1;
   }
+}
+
+.debug {
+  border: 1px solid red;
 }
